# E2ESDK

./: Cargo.toml  README.md
.github/workflows/: ci.yml
deploy/: install_sdk_android.sh  install_sdk_ios.sh  install_sdk_linux.sh  install_sdk_windows.bat
include/: e2esdk.h
src/: c_wrapper.rs  e2e_implementation.rs  exsecure.rs  lib.rs
tests/: c_wrapper_test.c  c_wrapper_test.rs  lib_test.rs
