[package]
name = "e2esdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
ctr = "0.9.2"
rand = "0.8.5"
rsa = "0.9.6"
sha2 = "0.10.8"

[build-dependencies]
cc = "1.0"

[lib]
name = "e2esdk"
#crate-type = ["cdylib"]
#crate-type = ["staticlib"]

[[test]]
name = "c_wrapper_test"
path = "tests/c_wrapper_test.rs"
#path = "tests/lib_test.rs"